# words

./: CMakeLists.txt  cfg.cpp  cfg.h  default.cfg  main.cpp  plan.cpp  plan.h  words.py
